2015-06-25  Matt Baker  <mattbaker@apple.com>

        Web Inspector: Wrong timeline selected after switching from Rendering Frames to Timelines
        https://bugs.webkit.org/show_bug.cgi?id=146331

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/TimelineSidebarPanel.js:
        Set previously selected timeline type to null if no tree element is selected when switching
        view mode to Rendering Frames.

2015-06-25  Joseph Pecoraro  <pecoraro@apple.com>

        [Mac] Web Inspector: Window dragging on toolbar should behave more like native window dragging
        https://bugs.webkit.org/show_bug.cgi?id=146324

        Reviewed by Timothy Hatcher.

        * UserInterface/Base/Main.js:
        On Mac 10.11 transition to using InspectorFrontendHost.startWindowDrag.
        For older Macs continue to use InspectorFrontendHost.moveWindowBy.
        
        * UserInterface/Protocol/InspectorFrontendHostStub.js:
        (WebInspector.InspectorFrontendHostStub.prototype.startWindowDrag):
        Add the stub for InspectorFrontendHostStub.

2015-06-24  Devin Rousso  <drousso@apple.com>

        Web Inspector: Pressing tab in the styles sidebar shouldn't insert a tab character
        https://bugs.webkit.org/show_bug.cgi?id=146189

        Reviewed by Timothy Hatcher.

        * UserInterface/Controllers/CodeMirrorCompletionController.js: Added variable to control whether semicolons are added to the end of autocompleted css values.
        (WebInspector.CodeMirrorCompletionController):
        (WebInspector.CodeMirrorCompletionController.prototype.set noEndingSemicolon):
        (WebInspector.CodeMirrorCompletionController.prototype._generateCSSCompletions):
        * UserInterface/Views/CSSStyleDeclarationSection.js:
        (WebInspector.CSSStyleDeclarationSection):
        (WebInspector.CSSStyleDeclarationSection.prototype.cssStyleDeclarationTextEditorSwitchRule):
        (WebInspector.CSSStyleDeclarationSection.prototype.focusRuleSelector):