@@ -1,3 +1,14 @@
+2015-06-28  Nikita Vasilyev  <nvasilyev@apple.com>
+
+        Web Inspector: Wrong border color of console messages when filters are enabled
+        https://bugs.webkit.org/show_bug.cgi?id=146392
+
+        Reviewed by Timothy Hatcher.
+
+        * UserInterface/Views/LogContentView.css:
+        (.console-error-level:not(.filtered-out, .filtered-out-by-search) + .console-item):
+        (.console-warning-level:not(.filtered-out, .filtered-out-by-search) + .console-item):
+
 2015-06-25  Matt Baker  <mattbaker@apple.com>
 
         Web Inspector: Wrong timeline selected after switching from Rendering Frames to Timelines
